--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .container {
   padding: 30px 40px;
 }
@@ -18,7 +22,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding: 5px;
+  padding: 3px;
 }
 
 .item {
